--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -459,6 +459,297 @@
     "\n",
     "print(f\"A hipotenusa irá medir: {hi:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O angulo 45.0° tem o SENO de 0.7071, COSENO de 0.7071 e TANGENTE de 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 18\n",
+    "import math\n",
+    "from math import radians, sin, cos, tan\n",
+    "\n",
+    "an = float(input(\"Digite o ângulo que você deseja: \"))\n",
+    "seno = sin(radians(an))\n",
+    "coseno = cos(radians(an))\n",
+    "tangente = tan(radians(an))\n",
+    "\n",
+    "print(f\"O angulo {an}° tem o SENO de {seno:.4f}, COSENO de {coseno:.4f} e TANGENTE de {tangente:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O aluno sorteado foi joao\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 19\n",
+    "import random\n",
+    "\n",
+    "nome1 = str(input(\"Digite o nome de um aluno: \"))\n",
+    "nome2 = str(input(\"Digite o nome do segundo aluno: \"))\n",
+    "nome3 = str(input(\"Digite o nome do terceiro aluno: \"))\n",
+    "nome4 = str(input(\"Digite o nome do quarto aluno: \"))\n",
+    "sorteio = [nome1, nome2, nome3, nome4]\n",
+    "\n",
+    "print(f\"O aluno sorteado foi {random.choice(sorteio)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A nova ordem será: \n",
+      "['victor', 'joao', 'ana', 'luis']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 20\n",
+    "\n",
+    "nom1 = str(input(\"Digite o nome de um aluno: \"))\n",
+    "nom2 = str(input(\"Digite o nome do segundo aluno: \"))\n",
+    "nom3 = str(input(\"Digite o nome do terceiro aluno: \"))\n",
+    "nom4 = str(input(\"Digite o nome do quarto aluno: \"))\n",
+    "\n",
+    "lista = [nom1, nom2, nom3, nom4]\n",
+    "random.shuffle(lista)\n",
+    "\n",
+    "print(\"A nova ordem será: \")\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pygame in c:\\users\\anaju\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (2.5.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.2.4; however, version 23.3.1 is available.\n",
+      "You should consider upgrading via the 'C:\\Users\\anaju\\AppData\\Local\\Programs\\Python\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Event(4352-AudioDeviceAdded {'which': 0, 'iscapture': 0})>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercise 21\n",
+    "!pip install pygame\n",
+    "\n",
+    "import pygame\n",
+    "pygame.init()\n",
+    "\n",
+    "pygame.mixer.music.load(\"caravan.mp3\")\n",
+    "pygame.mixer.music.play()\n",
+    "pygame.event.wait()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analisando seu nome...\n",
+      "Seu nome todo em maiúsculo fica assim: JOAO PEDRO MACHADO\n",
+      "Seu nome todo em minúsculo fica assim: joao pedro machado\n",
+      "Seu nome tem: 18 letras\n",
+      "Seu primeiro nome é joao e tem 4 letras\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 22\n",
+    "\n",
+    "no = str(input(\"Digite seu nome completo: \")).strip()\n",
+    "print(\"Analisando seu nome...\")\n",
+    "nomes = no.split(' ')\n",
+    "\n",
+    "print(f'Seu nome todo em maiúsculo fica assim: {no.upper()}')\n",
+    "print(f'Seu nome todo em minúsculo fica assim: {no.lower()}')\n",
+    "print(f'Seu nome tem: {len(no)} letras')\n",
+    "print(f'Seu primeiro nome é {nomes[0]} e tem {len(nomes[0])} letras')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "analisando número...\n",
+      "Unidade: 0\n",
+      "Dezena: 0\n",
+      "Centena: 8\n",
+      "Milhar: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 23\n",
+    "\n",
+    "num = int(input(\"Digite um número entre 0 e 9999\"))\n",
+    "\n",
+    "u = num // 1 % 10\n",
+    "d = num // 10 % 10\n",
+    "c = num // 100 % 10\n",
+    "m = num // 1000 % 10\n",
+    "\n",
+    "print(\"analisando número...\")\n",
+    "print(f\"Unidade: {u}\")\n",
+    "print(f\"Dezena: {d}\")\n",
+    "print(f\"Centena: {c}\")\n",
+    "print(f\"Milhar: {m}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercise 24\n",
+    "\n",
+    "# para evitar espaços desnecessários, utilizei \".strip()\"\n",
+    "\n",
+    "yct = input(\"Em que cidade você nasceu? \").strip()\n",
+    "\n",
+    "# para evitar problemas de reconhecimento da palavra, deixar a palavra que preciso em maiúsculo, utilizando \".upper()\"\n",
+    "\n",
+    "print(yct[:5].upper() == \"SANTO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seu nome tem 'Silva'? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 25\n",
+    "\n",
+    "sobr = str(input(\"Qual é o sue nome completo? \")).strip()\n",
+    "\n",
+    "print(f\"Seu nome tem 'Silva'? {'SILVA' in sobr.upper()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A sua frase foi '     Amanda ama o paulo  '\n",
+      "A letra a aparece 6 vezes na frase\n",
+      "A letra a aparece pela primeira vez na posição 1\n",
+      "A letra a aparece pela última vez na posição 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 26\n",
+    "\n",
+    "fr = str(input('Digite uma frase: '))\n",
+    "newfr = fr.upper().strip()\n",
+    "        \n",
+    "c = newfr.count('A')\n",
+    "print(f\"A sua frase foi '{fr}'\")\n",
+    "print(f'A letra a aparece {c} vezes na frase')\n",
+    "print(f'A letra a aparece pela primeira vez na posição {newfr.find(\"A\") + 1}')\n",
+    "print(f'A letra a aparece pela última vez na posição {newfr.rfind(\"A\") + 1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Muito prazer em te conhecer!\n",
+      "Seu primeiro nome é João\n",
+      "Seu Último nome é Silveira\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercise 27\n",
+    "\n",
+    "na = str(input('Qual é o seu nome completo? ')).strip()\n",
+    "\n",
+    "nomes = na.split()\n",
+    "\n",
+    "print('Muito prazer em te conhecer!')\n",
+    "print(f'Seu primeiro nome é {nomes[0]}')\n",
+    "print(f'Seu Último nome é {nomes[-1]}')"
+   ]
   }
  ],
  "metadata": {
