--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -750,6 +750,37 @@
     "print(f'Seu primeiro nome é {nomes[0]}')\n",
     "print(f'Seu Último nome é {nomes[-1]}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "1\n",
+      "Parabéns, você acertou!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercise 28\n",
+    "import random\n",
+    "\n",
+    "n = random.randint(1, 6)\n",
+    "s = 0\n",
+    "while s != n :\n",
+    "    s = int(input('Adivinhe o número que eu escolhi (Obs.: De 1 ao 6): '))\n",
+    "    print(s)\n",
+    "    if (s == n) :\n",
+    "        print(\"Parabéns, você acertou!\")"
+   ]
   }
  ],
  "metadata": {
